--- a/TimeManager.IdP/appsettings.json
+++ b/TimeManager.IdP/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=mssql-server,1433;Database=TimeManagerDB;User Id=sa;Password=Password.1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
