--- a/TimeManager.IdP/appsettings.json
+++ b/TimeManager.IdP/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mssql-server,1433;Database=TimeManagerDB;User Id=sa;Password=Password.1234"
+    "DefaultConnection": "Server=mssql-server,1433;Database=TimeManager_IdP;User Id=sa;Password=Password.1234"
   },
   "Logging": {
     "LogLevel": {
