--- a/TimeManager.IdP/TimeManager.IdP.csproj
+++ b/TimeManager.IdP/TimeManager.IdP.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.5.0" />
     <PackageReference Include="JWT" Version="10.0.0-beta9" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
